Revision history for JSON-Schema-Modern

{{$NEXT}}
          - skip some regex tests when Unicode library is too old for those
            character classes being tested

0.517     2021-08-28 04:34:17Z
          - restore some optional modules used for format validation to the
            prereq list that were mistakenly dropped in version 0.515
          - date-time, date and time formats no longer match non-ascii digits

0.516     2021-08-14 19:53:16Z
          - fix email format tests on older prereqs
          - avoid errors when enabling validate_formats before evaluating but
            after loading a schema

0.515     2021-08-03 04:07:02Z
          - no longer calling a keyword's callback during traverse() if that
            keyword has an error
          - better handling of blessed data types and other references
          - new config option scalarref_booleans, which will treat \0, \1 in
            data as json booleans
          - support for the most recent specification version, draft2020-12

0.514     2021-07-22 05:17:08Z
          - add_schema() now dies with the errors themselves, rather than an
            object that serializes to an unhelpful value in uncaught die()s.

0.513     2021-06-26 19:45:51Z
          - skip acceptance test for integer overflow when nvsize is too
            large to produce the expected error
          - support for specification version draft7, through the "$schema"
            keyword and the new 'specification_version' constructor option

0.512     2021-06-09 02:29:23Z
          - distribution has been renamed from JSON-Schema-Draft201909 to
            JSON-Schema-Modern. JSON::Schema::Draft201909 lives on as a
            compatibility wrapper.

0.028     2021-06-08 02:48:07Z
          - fix validation regex for the $anchor keyword
          - unevaluatedItems and unevaluatedProperties keywords are now
            applied after all other keywords in the applicator vocabulary